# z2p

./: Cargo.toml
.cargo/: config.toml
migrations/: 20230919124549_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
