[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
reqwest = "0.11.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
path = "src/main.rs"
name = "z2p"
